fix: z-index

--- a/src/client/components/Panel/Sidebar/Link/index.less
+++ b/src/client/components/Panel/Sidebar/Link/index.less
@@ -71,6 +71,7 @@
 }
 
 :local(.tooltip) {
+  z-index: 858585;
   display: none;
 }
 
